Don't assume we know the size of the decoded string, expand the buffer whenever the transcoder reports it wrote 0 bytes (XERCESC-2052)

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@1701594 13f79535-47bb-0310-9956-ffa450edef68